[package]
name = "fp-consensus"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for Frontier consensus"
edition = "2018"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/AXIA-DEV/axlib-axtend", branch = "master" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
ethereum = { git = "https://github.com/AXIA-DEV/axianetwork-ethereum", branch = "v0.9.0", default-features = false, features = ["with-codec"] }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"codec/std",
	"ethereum/std",
	"rlp/std",
	"sha3/std",
]
